UI build settings
 - use parent pom's sling settings for user, pass, port, host, etc...

--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -45,9 +45,9 @@
                                     <goal>install</goal>
                                 </goals>
                                 <configuration>
-                                    <slingUrl>http://localhost:8888/system/console</slingUrl>
-                                    <user>admin</user>
-                                    <password>admin</password>
+                                    <slingUrl>http://${sling.host}:${sling.port}/system/console</slingUrl>
+                                    <user>${sling.username}</user>
+                                    <password>${sling.password}</password>
                                 </configuration>
                             </execution>
                         </executions>
