Add etc folder, jQuery and TinyMCE rich text editor
Add /etc folder and update initial-content install to include /etc folder
on bundle install. Add jQuery and TinyMCE JavaScript to the project. Add
scripts to admin page.

--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -24,6 +24,7 @@
                         <Sling-Nodetypes>SLING-INF/nodetypes/nodetypes.cnd</Sling-Nodetypes>
                         <Sling-Initial-Content>
                             jcr_root/apps;overwrite:=true;uninstall:=true;path:=/apps,
+                            jcr_root/etc;overwrite:=true;uninstall:=true;path:=/etc,
                             jcr_root/content;overwrite:=false;uninstall:=false;path:=/content
                         </Sling-Initial-Content>
                     </instructions>
