--- a/core/pom.xml
+++ b/core/pom.xml
@@ -255,6 +255,11 @@
             <version>2.3.8</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency>
     </dependencies>
 
     <properties>
