--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -25,7 +25,8 @@
                         <Sling-Initial-Content>
                             jcr_root/apps;overwrite:=true;uninstall:=true;path:=/apps,
                             jcr_root/etc;overwrite:=true;uninstall:=true;path:=/etc,
-                            jcr_root/content;overwrite:=false;uninstall:=false;path:=/content
+                            jcr_root/content/admin;overwrite:=true;uninstall:=true;path:=/content/admin,
+                            jcr_root/content/assets;overwrite:=false;uninstall:=false;path:=/content/assets
                         </Sling-Initial-Content>
                     </instructions>
                 </configuration>
