--- a/core/pom.xml
+++ b/core/pom.xml
@@ -72,6 +72,17 @@
                             </execution>
                         </executions>
                     </plugin>
+                    <plugin>
+                        <groupId>org.apache.felix</groupId>
+                        <artifactId>maven-bundle-plugin</artifactId>
+                        <extensions>true</extensions>
+                        <version>2.0.1</version>
+                        <configuration>
+                            <instructions>
+                                <Bundle-Activator>com.nateyolles.sling.publick.Activator</Bundle-Activator>
+                            </instructions>
+                        </configuration>
+                    </plugin>
                 </plugins>
             </build>
         </profile>
@@ -266,7 +277,12 @@
             <version>2.0.8</version>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.auth.core</artifactId>
+            <version>1.3.0</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <properties>
