Create reCAPTCHA config
Create config section and add to sidebar. Update constants with sidebar links.
Update initial content to provide a config but not override on next build.
Create recaptchaconfig component and Java bean. Create recaptcha servelt to
update properties.

--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -24,7 +24,8 @@
                         <Sling-Nodetypes>SLING-INF/nodetypes/nodetypes.cnd</Sling-Nodetypes>
                         <Sling-Initial-Content>
                             jcr_root/apps;overwrite:=true;uninstall:=true;path:=/apps,
-                            jcr_root/etc;overwrite:=true;uninstall:=true;path:=/etc,
+                            jcr_root/etc/clientlibs;overwrite:=true;uninstall:=true;path:=/etc/clientlibs,
+                            jcr_root/etc/config;overwrite:=false;uninstall:=false;path:=/etc/config,
                             jcr_root/content/admin;overwrite:=true;uninstall:=true;path:=/content/admin,
                             jcr_root/content/assets;overwrite:=false;uninstall:=false;path:=/content/assets
                         </Sling-Initial-Content>
