--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -27,7 +27,8 @@
                             jcr_root/etc/clientlibs;overwrite:=true;uninstall:=true;path:=/etc/clientlibs,
                             jcr_root/etc/config;overwrite:=false;uninstall:=false;path:=/etc/config,
                             jcr_root/content/admin;overwrite:=true;uninstall:=true;path:=/content/admin,
-                            jcr_root/content/assets;overwrite:=false;uninstall:=false;path:=/content/assets
+                            jcr_root/content/assets;overwrite:=false;uninstall:=false;path:=/content/assets,
+                            jcr_root/content/blog;overwrite:=false;uninstall:=false;path:=/content/blog
                         </Sling-Initial-Content>
                     </instructions>
                 </configuration>
