--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -24,6 +24,7 @@
                         <Sling-Nodetypes>SLING-INF/nodetypes/nodetypes.cnd</Sling-Nodetypes>
                         <Sling-Initial-Content>
                             jcr_root/apps;overwrite:=true;uninstall:=true;path:=/apps,
+                            jcr_root/libs;overwrite:=true;uninstall:=true;path:=/libs,
                             jcr_root/etc/clientlibs;overwrite:=true;uninstall:=true;path:=/etc/clientlibs,
                             jcr_root/etc/config;overwrite:=false;uninstall:=false;path:=/etc/config,
                             jcr_root/content/admin;overwrite:=true;uninstall:=true;path:=/content/admin,
