--- a/core/pom.xml
+++ b/core/pom.xml
@@ -301,6 +301,13 @@
             <version>2.2.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.4</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
     <properties>
