Organize admin configuration
Move recaptcha config to its own page under config. Update sidebar menu to have config parent
node be collapsible. Remove search bar and add create new blog button. Remove create new blog
button from the dashboard. Update the Publick Constants to reflect the new path and update
the RecaptchaConfigService to use the new path.

--- a/ui/src/main/resources/jcr_root/content/admin/config.json
+++ b/ui/src/main/resources/jcr_root/content/admin/config.json
@@ -1,14 +1,18 @@
 {
     "jcr:primaryType": "publick:page",
     "sling:resourceType" : "publick/pages/adminSecurePage",
-    "title" : "Config",
-    "jcr:content" : {
-        "mainContent" : {
-            "jcr:primaryType": "nt:unstructured",
-            "sling:resourceType" : "publick/components/foundation/parsys",
-            "recaptchaConfig" : {
+    "recaptcha" : {
+        "jcr:primaryType": "publick:page",
+        "sling:resourceType" : "publick/pages/adminSecurePage",
+        "title" : "reCAPTCHA configuration",
+        "jcr:content" : {
+            "mainContent" : {
                 "jcr:primaryType": "nt:unstructured",
-                "sling:resourceType" : "publick/components/admin/recaptchaConfig"
+                "sling:resourceType" : "publick/components/foundation/parsys",
+                "recaptchaConfig" : {
+                    "jcr:primaryType": "nt:unstructured",
+                    "sling:resourceType" : "publick/components/admin/recaptchaConfig"
+                }
             }
         }
     }
