Create workflow to save and retrieve email configurations
Add EmailService and interface to save and retrieve email configurations. Update
constants to include new email config path. Update email post servlet to use
service to save configs. Update HTML to use servlet. Update HTML to not show
password even if set. Create java bean for Sightly component to use. Update
sidebar button to fill full sidebar.

--- a/ui/src/main/resources/jcr_root/content/admin/config.json
+++ b/ui/src/main/resources/jcr_root/content/admin/config.json
@@ -15,5 +15,20 @@
                 }
             }
         }
+    },
+    "email" : {
+        "jcr:primaryType": "publick:page",
+        "sling:resourceType" : "publick/pages/adminSecurePage",
+        "title" : "Email configuration",
+        "jcr:content" : {
+            "mainContent" : {
+                "jcr:primaryType": "nt:unstructured",
+                "sling:resourceType" : "publick/components/foundation/parsys",
+                "emailConfig" : {
+                    "jcr:primaryType": "nt:unstructured",
+                    "sling:resourceType" : "publick/components/admin/emailConfig"
+                }
+            }
+        }
     }
 }
