--- a/ui/src/main/resources/jcr_root/apps/publick/config.json
+++ b/ui/src/main/resources/jcr_root/apps/publick/config.json
@@ -1,29 +1,30 @@
 {
-    "jcr:primaryType": "sling:Folder",
-    "rewriter" : {
-        "jcr:primaryType": "sling:Folder",
-        "linkrewriter" : {
-            "jcr:primaryType" : "nt:unstructured",
-            "contentTypes" : [
-                "text/html"
-            ],
-            "enabled" : true,
-            "generatorType" : "html-generator",
-            "order" : 1,
-            "paths" : [
-                "/content"
-            ],
-            "serializerType" : "html-serializer",
-            "transformerTypes" : [
-                "linkrewriter"
-            ],
-            "generator-html-generator" : {
-                "jcr:primaryType" : "nt:unstructured",
-                "includeTags" : [
-                    "A",
-                    "/A"
-                ]
-            }
-        }
-    }
+    "jcr:primaryType": "sling:Folder"
+    // ,
+    // "rewriter" : {
+    //     "jcr:primaryType": "sling:Folder",
+    //     "linkrewriter" : {
+    //         "jcr:primaryType" : "nt:unstructured",
+    //         "contentTypes" : [
+    //             "text/html"
+    //         ],
+    //         "enabled" : true,
+    //         "generatorType" : "html-generator",
+    //         "order" : 1,
+    //         "paths" : [
+    //             "/content"
+    //         ],
+    //         "serializerType" : "html-serializer",
+    //         "transformerTypes" : [
+    //             "linkrewriter"
+    //         ],
+    //         "generator-html-generator" : {
+    //             "jcr:primaryType" : "nt:unstructured",
+    //             "includeTags" : [
+    //                 "A",
+    //                 "/A"
+    //             ]
+    //         }
+    //     }
+    // }
 }
