Add ability to comment on blog posts
Add comments directory, publick:comments nodetype and permissions to post to /bin/addcomment.
Add comment servlet to allows post requests and to create the comment nodes in the JCR. Add
Comments View component and Java bean backing it. Add new JS and CSS files to allow for
comment form.

--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -29,7 +29,8 @@
                             jcr_root/etc/config;overwrite:=false;uninstall:=false;path:=/etc/config,
                             jcr_root/content/admin;overwrite:=true;uninstall:=true;path:=/content/admin,
                             jcr_root/content/assets;overwrite:=false;uninstall:=false;path:=/content/assets,
-                            jcr_root/content/blog;overwrite:=false;uninstall:=false;path:=/content/blog
+                            jcr_root/content/blog;overwrite:=false;uninstall:=false;path:=/content/blog,
+                            jcr_root/content/comments;overwrite:=false;uninstall:=false;path:=/content/comments
                         </Sling-Initial-Content>
                     </instructions>
                 </configuration>
