Add System Settings configuration
Add link to sidebar. Add component with blog name field. Add servlet to accept form
post. Add Service Interface and Implementation to update and get system settings.
Update readme and admin welcome page to include instructions.

--- a/ui/src/main/resources/jcr_root/content/admin/config.json
+++ b/ui/src/main/resources/jcr_root/content/admin/config.json
@@ -1,6 +1,21 @@
 {
     "jcr:primaryType": "publick:page",
     "sling:resourceType" : "publick/pages/adminSecurePage",
+    "system" : {
+        "jcr:primaryType": "publick:page",
+        "sling:resourceType" : "publick/pages/adminSecurePage",
+        "title" : "System Settings",
+        "jcr:content" : {
+            "mainContent" : {
+                "jcr:primaryType": "nt:unstructured",
+                "sling:resourceType" : "publick/components/foundation/parsys",
+                "systemConfig" : {
+                    "jcr:primaryType": "nt:unstructured",
+                    "sling:resourceType" : "publick/components/admin/systemConfig"
+                }
+            }
+        }
+    },
     "recaptcha" : {
         "jcr:primaryType": "publick:page",
         "sling:resourceType" : "publick/pages/adminSecurePage",
