Enable extensionless URLs
Add checkbox option to the system settings page. Add modal instructions on Apache
rewrites to enable extensionless URLs. Add getter and setter methods to the System
Settings Service. Create the Link Rewriter Service that can rewrite a single URL
or rewrite all URLs in an HTML string using jsoup as the Java HTML parser. Make
call to Link Rewriter service from a filter passing in the entire response HTML.
Update the blog editing system to use querystring params instead of suffixes as
there's no suffix without an extension.

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -191,6 +191,16 @@
                                     <bundleFileName>${project.build.directory}/dependency/org.apache.sling.rewriter-1.0.4.jar</bundleFileName>
                                 </configuration>
                             </execution>
+                            <execution>
+                                <id>install-jsoup</id>
+                                <goals>
+                                    <goal>install-file</goal>
+                                </goals>
+                                <phase>install</phase>
+                                <configuration>
+                                    <bundleFileName>${project.build.directory}/dependency/org.jsoup-1.8.3.jar</bundleFileName>
+                                </configuration>
+                            </execution>
                         </executions>
                     </plugin>
                 </plugins>
@@ -355,8 +365,12 @@
             <version>1.0.2</version>
             <scope>provided</scope>
         </dependency>
-
-
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.8.3</version>
+            <scope>provided</scope>
+        </dependency>
         <!-- <dependency>
             <groupId>xml-apis</groupId>
             <artifactId>xml-apis</artifactId>
