--- a/core/pom.xml
+++ b/core/pom.xml
@@ -101,7 +101,7 @@
                                 </goals>
                                 <configuration>
                                     <artifactItems>
-                                        <includeArtifactIds>org.apache.sling.i18n,mail,org.apache.sling.jcr.compiler,org.apache.sling.xss,org.apache.sling.scripting.sightly</includeArtifactIds>
+                                        <includeArtifactIds>org.apache.sling.i18n,mail,org.apache.sling.jcr.compiler,org.apache.sling.xss,org.apache.sling.scripting.sightly,org.jsoup</includeArtifactIds>
                                     </artifactItems>
                                 </configuration>
                             </execution>
@@ -198,7 +198,7 @@
                                 </goals>
                                 <phase>install</phase>
                                 <configuration>
-                                    <bundleFileName>${project.build.directory}/dependency/org.jsoup-1.8.3.jar</bundleFileName>
+                                    <bundleFileName>${project.build.directory}/dependency/org.apache.servicemix.bundles.jsoup-1.5.2_2.jar</bundleFileName>
                                 </configuration>
                             </execution>
                         </executions>
@@ -366,18 +366,10 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.jsoup</groupId>
-            <artifactId>jsoup</artifactId>
-            <version>1.8.3</version>
-            <scope>provided</scope>
+            <groupId>org.apache.servicemix.bundles</groupId>
+            <artifactId>org.apache.servicemix.bundles.jsoup</artifactId>
+            <version>1.5.2_2</version>
         </dependency>
-        <!-- <dependency>
-            <groupId>xml-apis</groupId>
-            <artifactId>xml-apis</artifactId>
-            <version>2.0.2</version>
-            <scope>provided</scope>
-        </dependency> -->
-
     </dependencies>
 
     <properties>
