--- a/ui/package.json
+++ b/ui/package.json
@@ -38,5 +38,8 @@
     "load-grunt-tasks": "~0.1.3",
     "time-grunt": "~0.1.2",
     "grunt-contrib-copy": "~0.4.1"
+  },
+  "dependencies": {
+    "grunt-cli": "~0.1.13"
   }
 }
