--- a/core/pom.xml
+++ b/core/pom.xml
@@ -44,6 +44,13 @@
                                     commons-lang3,
                                     java-akismet
                                 </Embed-Dependency>
+                                <Import-Package>
+                                  org.apache.sling.engine,
+                                  !org.osgi.service.useradmin,
+                                  !org.apache.sling.engine.impl,
+                                  !org.apache.sling.servlets.resolver.internal,
+                                  *
+                                </Import-Package>
                             </instructions>
                         </configuration>
                     </execution>
@@ -129,8 +136,6 @@
                                         commons-logging,
                                         httpcore-osgi,
                                         httpclient-osgi,
-                                        org.apache.sling.distribution.core,
-                                        org.apache.sling.hc.core,
                                         org.apache.jackrabbit.vault
                                     </includeArtifactIds>
                                 </configuration>
@@ -259,26 +264,6 @@
                                 <phase>install</phase>
                                 <configuration>
                                     <bundleFileName>${project.build.directory}/dependency/httpclient-osgi-4.5.jar</bundleFileName>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>install-distribution</id>
-                                <goals>
-                                    <goal>install-file</goal>
-                                </goals>
-                                <phase>install</phase>
-                                <configuration>
-                                    <bundleFileName>${project.build.directory}/dependency/org.apache.sling.distribution.core-0.1.6.jar</bundleFileName>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>install-hc</id>
-                                <goals>
-                                    <goal>install-file</goal>
-                                </goals>
-                                <phase>install</phase>
-                                <configuration>
-                                    <bundleFileName>${project.build.directory}/dependency/org.apache.sling.hc.core-1.2.2.jar</bundleFileName>
                                 </configuration>
                             </execution>
                             <execution>
@@ -427,6 +412,12 @@
         </dependency>
         <dependency>
             <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.engine</artifactId>
+            <version>2.3.6</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.jcr.jackrabbit.server</artifactId>
             <version>2.2.0</version>
             <scope>provided</scope>
@@ -484,16 +475,6 @@
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
             <version>1.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.sling</groupId>
-            <artifactId>org.apache.sling.distribution.core</artifactId>
-            <version>0.1.6</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.sling</groupId>
-            <artifactId>org.apache.sling.hc.core</artifactId>
-            <version>1.2.2</version>
         </dependency>
         <dependency>
             <groupId>org.apache.jackrabbit.vault</groupId>
